objects/Business_Segment__c.object
<CustomObject>
    <fields>
        <fullName>Aggregation_CONSOL__c</fullName>
        <description>Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)</description>
        <label>Aggregation (CONSOL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_OEP_FS__c</fullName>
        <description>Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)</description>
        <label>Aggregation (OEP_FS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_OEP_WFP__c</fullName>
        <description>Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)</description>
        <label>Aggregation (OEP_WFP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_OEP_WFSC__c</fullName>
        <description>Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)</description>
        <label>Aggregation (OEP_WFSC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aggregation_WF_REP__c</fullName>
        <description>Aggregation (Plan1, Plan2, Plan3): The aggregation option for the member being loaded, as related to the specified plan. This is available only if the application is valid for this plan type. This value is passed as a string. Valid values:
• + (Addition)
• - (Subtraction)
• * (Multiplication)
• / (Division)
• % (Percent)
• ~ (Ignore during consolidation)
• Never (Do not aggregate, regardless of hierarchy)</description>
        <label>Aggregation (WF_REP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>~</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alias_Default__c</fullName>
        <description>Region description</description>
        <label>Alias: Default</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Counter__c</fullName>
        <description>What it Does? Stores the approval counter for that the particular records belongs to. 
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Approval Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>What it Does? Stores current approval status from the approval process. 
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending L1 Approval</fullName>
                </value>
                <value>
                    <fullName>Pending L2 Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Sub_Status__c</fullName>
        <description>What it Does? Stores approval sub status from the approval process. 
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Approval Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L1 Approved</fullName>
                </value>
                <value>
                    <fullName>L2 Approved</fullName>
                </value>
                <value>
                    <fullName>L1 Rejected</fullName>
                </value>
                <value>
                    <fullName>L2 Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Submitter__c</fullName>
        <description>value is used by and set in the approval process</description>
        <label>Approval Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Blackout_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Stores whether the current date falls in blackout period or not 
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Blackout Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Segment_Cloud_Hi_Parent_N__c</fullName>
        <formula>Business_Segment_Cloud_Hierarchy__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Segment Cloud Hi Parent N</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment_Cloud_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search using *0*</inlineHelpText>
        <label>Business Segment Cloud Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>Business Segment</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>Business Segment Cloud View Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Business Segments (Business Segment Cloud Hierarchy)</relationshipLabel>
        <relationshipName>Business_Segments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Segment_ID__c</fullName>
        <label>Business Segment ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment_Offer_Type_Hi_Parent_No__c</fullName>
        <formula>Business_Segment_Offer_Type_Hierarchy1__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Segment Offer Type Hi Parent No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment_Offer_Type_Hierarchy1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search using *0*</inlineHelpText>
        <label>Business Segment Offer Type Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>Business Segment</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>Business Segment Management Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Business Segments</relationshipLabel>
        <relationshipName>Business_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Segment_Offer_Type_Hierarchy__c</fullName>
        <label>Business Segment Offer Type Hi Not Used</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <description>Business Segment ID</description>
        <label>Business Segment</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Storage_CONSOL__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage (CONSOL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_OEP_FS__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage (OEP_FS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_OEP_WFP__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage (OEP_WFP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_OEP_WFSC__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage (OEP_WFSC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_WF_REP__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage (WF_REP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage__c</fullName>
        <description>• Store—Data is stored with the dimension. Data associated with this member can be shared. The ShareData property applies to the member only. The Dimension Root Member cannot be shared.
• NeverShare—Data associated with this dimension cannot be shared, even if there is an implied share relationship, such as with a parent with one child. In this case, the data is duplicated in the parent and child.
• LabelOnly—No data is associated with this dimension.
• DynamicCalcAndStore—Data associated with this dimension is not calculated until requested by a user. Once calculated, the data is stored.
• DynamicCalc—Data associated with this dimension is not calculated until requested by a user. The data is not stored but is discarded after the request is completed.</description>
        <label>Data Storage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc and Store</fullName>
                </value>
                <value>
                    <fullName>Dynamic Calc</fullName>
                </value>
                <value>
                    <fullName>Never Share</fullName>
                </value>
                <value>
                    <fullName>Label Only</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <description>Data Type: The data storage value. Valid values:
• Currency: Stores and displays the member value in the default currency.
• Non-currency: Stores and displays the member value as a numeric value.
• Percentage: Stores values as numeric values and displays the member value as a percentage.
• Smart List: Stores values as numeric values and displays the member value as a string.
• Date: Stores and displays the member value in the format mm/dd/yyyy or dd/mm/yyyy.
• Text: Stores and displays the member&apos;s value as text.
• Unspecified: Stores and displays the member value as Unspecified</description>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>unspecified</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Non Currency</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>SmartList</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Definition__c</fullName>
        <description>Region definition</description>
        <label>Definition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Legal entity description</description>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freez_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freez Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Parent_node__c</fullName>
        <formula>Hierarchy_node__r.Node_ID1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Parent node</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Type__c</fullName>
        <label>Hierarchy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Set</fullName>
                </value>
                <value>
                    <fullName>Stored</fullName>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hierarchy_node__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Search using *0*</inlineHelpText>
        <label>Hierarchy node</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Domain__c</field>
                <operation>equals</operation>
                <value>Business Segment</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Hierarchy_Description__c</field>
                <operation>equals</operation>
                <value>Business Segment Hierarchy</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Node_Type__c</field>
                <operation>equals</operation>
                <value>Hierarchy Data</value>
            </filterItems>
            <filterItems>
                <field>Hierarchy__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Business Segments (Hierarchy node)</relationshipLabel>
        <relationshipName>Business_Segments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Unique_ID__c</fullName>
        <label>Internal Unique ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Approved_Date__c</fullName>
        <description>Last time approval status was changed to Approved; set in WF</description>
        <label>Last Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Count__c</fullName>
        <label>Legal Entity Count</label>
        <summaryForeignKey>Business_Segment_Legal_Entity__c.Business_Segment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NewUpdated_Indicator__c</fullName>
        <description>used internally in WF notifications; not exposed on layouts</description>
        <formula>IF( Approval_Counter__c &lt; 2, &quot;New&quot;, &quot;Updated&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewUpdated Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type_CONSOL__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (CONSOL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_OEP_FS__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (OEP_FS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_OEP_WFP__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (OEP_WFP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_OEP_WFSC__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (OEP_WFSC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type_WF_REP__c</fullName>
        <description>Defines if the Dimension member is valid for the specified database</description>
        <label>Plan Type (WF_REP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solve_Order_CONSOL__c</fullName>
        <description>The solve order number determines the order by which members are evaluated in the dimension. You can select a number between 1 and 127. The member with the highest solve order number is evaluated first (for example, a formula with a solve order number of 20 is evaluated before a formula with a solve order number of five).</description>
        <label>Solve Order (CONSOL)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solve_Order_WF_REP__c</fullName>
        <description>The solve order number determines the order by which members are evaluated in the dimension. You can select a number between 1 and 127. The member with the highest solve order number is evaluated first (for example, a formula with a solve order number of 20 is evaluated before a formula with a solve order number of five).</description>
        <label>Solve Order (WF_REP)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Do Not Edit – For Admin Use only</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Two_Pass_Calculation__c</fullName>
        <description>Calculates a member on the second pass through the outline</description>
        <label>Two Pass Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
</CustomObject>